apps/tunnel-hornberg/cluster/specht-labs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tunnel-hornberg
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared
      namespace: envoy-gateway-system
      port: 443
  hostnames:
    - tunnel.kienzlers-world.de
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: tunnel-hornberg
          port: 80
          weight: 1
